# otf2_cli_io_filter

./: .clang-format  .gitignore  CMakeLists.txt  README.md
cmake/: Otf2Generate.cmake
src/: CMakeLists.txt  definition_callbacks.cpp  event_callbacks.cpp  filtered_writer.cpp  global_callbacks.cpp  local_callbacks.cpp  local_reader.cpp  otf2_filter_io.cpp  trace_filter.cpp  trace_reader.cpp  trace_writer.cpp
src/filter/: io_file_filter.cpp
src/filter/include/: filter.hpp  io_file_filter.hpp
src/include/: definition_callbacks.hpp  event_callbacks.hpp  filter.hpp  filtered_writer.hpp  global_callbacks.hpp  local_callbacks.hpp  local_reader.hpp  otf2_handler.hpp  otf2_writer.hpp  trace_filter.hpp  trace_reader.hpp  trace_writer.hpp
src/templates/: definition_callbacks.tmpl.cpp  definition_callbacks.tmpl.hpp  event_callbacks.tmpl.cpp  event_callbacks.tmpl.hpp  filter.tmpl.hpp  global_callbacks.tmpl.cpp  global_callbacks.tmpl.hpp  io_file_filter.tmpl.cpp  local_callbacks.tmpl.cpp  local_callbacks.tmpl.hpp  local_reader.tmpl.cpp  otf2_handler.tmpl.hpp  otf2_writer.tmpl.hpp  trace_reader.tmpl.cpp  trace_writer.tmpl.cpp  trace_writer.tmpl.hpp
tests/: CMakeLists.txt  create_mpi_trace.cpp  create_test_trace.cpp  itest_handler.hpp  mpi_config.hpp  test_handler.hpp  test_io_filter.cpp  test_mpi_trace.cpp  test_trace.hpp  test_trace_reader.cpp  test_trace_writer.cpp
tests/templates/: itest_handler.tmpl.hpp
